--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,8 @@ dependencies {
     def nav_version = "2.3.2"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    //Safe Args
+    apply plugin: "androidx.navigation.safeargs.kotlin"
 
     // Room Lib
     def room_version = "2.2.6"
